--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -921,7 +921,7 @@
         var file_types = $("#supported-file-types").attr('value');
         console.log(file_types)
         if(file_types!= ".*"){
-            $("#file-types").text("Only the listed file types can be uploaded " + file_types + ".");
+            $("#file-types").text("Only the listed file types can be uploaded: " + file_types + ".");
         }
         else
         {
@@ -950,9 +950,8 @@
         // file upload validation when file is selected for upload
         $('#add-file-input').on('change', function() {
             var file_types = $("#supported-file-types").attr('value');
-            console.log(file_types)
             if(file_types!= ".*"){
-                file_types = file_types.substring(1,file_types.length - 1).split(",");
+                file_types = file_types.split(",");
             }
             else
             {
@@ -964,14 +963,18 @@
             var ext = ".*";
             for (var i = 0; i < fileList.length; i++) {
                 ext = fileList[i].name.match(/\.([^\.]+)$/)[1];
-                ext = "'." + ext +"'";
+                ext = "." + ext;
                 var ext_found = false;
-                var index;
-                for (index = 0; index < file_types.length; index++) {
-                    //console.log('ext:' + file_types[index].trim());
-                    if (ext == file_types[index].trim()) {
-                        ext_found = true;
-                        break;
+                if (ext === file_types) {
+                    ext_found = true;
+                }
+                else {
+                    var index;
+                    for (index = 0; index < file_types.length; index++) {
+                        if (ext === file_types[index].trim()) {
+                            ext_found = true;
+                            break;
+                        }
                     }
                 }
                 if (!ext_found) {
