--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -10,7 +10,14 @@
     <input type="hidden" id="supported-file-types" value="{{ cm.get_supported_upload_file_types }}">
     <input type="hidden" id="allow-multiple-file-upload" value={{ cm.can_have_multiple_files }}>
     <input type="hidden" id="file-count" value={{ cm.files.all.count }}>
-
+    {% block error %}
+        {%  if file_validation_error %}
+            <div class="alert alert-danger alert-dismissible" role="alert">
+                  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <strong>Uploaded File Validation Error:{{ file_validation_error }}</strong>
+             </div>
+        {%  endif %}
+    {% endblock %}
     <h2>Resource Details</h2>
 
 <div class="btn-toolbar" style="padding-bottom: 0.5em;">
@@ -665,124 +672,128 @@
     {#                #}
 
     <!-- Modal -->
-    <div class="modal fade" id="submit-for-publication-dialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            <h4 class="modal-title" id="submit-for-publication-title">Submit resource for publication</h4>
-          </div>
-          <div class="modal-body">
-            <p>
-                Once you submit the resource for publication it cannot be changed again.  This will assign a DOI to the
-                resource as it stands now and mark it as permanent.  To make any changes after this, you <strong>must</strong>
-                create a brand new resource. Click "Publish" if you really intend to do this.
-            </p>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-            <a type="button" class="btn btn-danger" href="/hsapi/_internal/{{ cm.short_id }}/publish/">Publish</a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-    <div class="modal fade" id="delete-resource-dialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            <h4 class="modal-title" id="delete-resource-title">Delete Resource</h4>
-          </div>
-          <div class="modal-body">
-                <strong>THIS IS A PERMANENT ACTION </strong> that will delete the resource entirely. Keep a copy if you still need this information.
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-            <a type="button" class="btn btn-danger" href="/hsapi/_internal/{{ cm.short_id }}/delete-resource/">Delete</a>
-          </div>
-        </div>
-      </div>
-    </div>
-        <!-- Modal -->
-    <div class="modal fade" id="add-dcterm-dialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-        <form action="/hsapi/_internal/{{ cm.short_id }}/add-metadata/">
-
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            <h4 class="modal-title" id="myModalLabel">Add metadata term</h4>
-          </div>
-          <div class="modal-body">
-                    {% csrf_token %}
-
-                    {{ dcterm_frm|crispy }}
-
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="submit" class="btn btn-primary">Save changes</button>
-          </div>
-        </form>
-        </div>
-      </div>
-    </div>
-        <!-- Modal -->
-    <div class="modal fade" id="add-reference-dialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <form action="/hsapi/_internal/{{ cm.short_id }}/add-citation/">
-
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            <h4 class="modal-title" id="myModalLabel">Add reference</h4>
-          </div>
-          <div class="modal-body">
-                  {% csrf_token %}
-                  <div class="form-group">
-                      <label for="add-citation-input">Citation text:</label>
-                      <textarea class="form-control" name="content" id="add-citation-input" cols="30" rows="10"></textarea>
+    {% block modal %}
+        {%  block modal_publish_resource %}
+            <div class="modal fade" id="submit-for-publication-dialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title" id="submit-for-publication-title">Submit resource for publication</h4>
                   </div>
-
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="submit" class="btn btn-primary">Save changes</button>
-          </div>
-          </form>
-        </div>
-      </div>
-    </div>
-
-    <div class="modal fade" id="add-file-dialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <form action="/hsapi/_internal/{{ cm.short_id }}/add-file-to-resource/" method="POST" enctype="multipart/form-data">
-
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            <h4 class="modal-title" id="myModalLabel">Add file to resource</h4>
-          </div>
-          <div class="modal-body">
-                  {% csrf_token %}
-                  <div class="form-group">
-                      <label for="add-file-input">Select files:</label>
-                      <input type="file" name="files" id="add-file-input" multiple/>
+                  <div class="modal-body">
+                    <p>
+                        Once you submit the resource for publication it cannot be changed again.  This will assign a DOI to the
+                        resource as it stands now and mark it as permanent.  To make any changes after this, you <strong>must</strong>
+                        create a brand new resource. Click "Publish" if you really intend to do this.
+                    </p>
                   </div>
-                  <div id="file-types">Any file type can be uploaded.</div>
-                  <div id="file-multiple">Multiple file upload is allowed.</div>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="submit" class="btn btn-primary">Save changes</button>
-          </div>
-          </form>
-        </div>
-      </div>
-    </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <a type="button" class="btn btn-danger" href="/hsapi/_internal/{{ cm.short_id }}/publish/">Publish</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+        {% endblock %}
+        {% block modal_delete_resource %}
+            <div class="modal fade" id="delete-resource-dialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title" id="delete-resource-title">Delete Resource</h4>
+                  </div>
+                  <div class="modal-body">
+                        <strong>THIS IS A PERMANENT ACTION </strong> that will delete the resource entirely. Keep a copy if you still need this information.
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <a type="button" class="btn btn-danger" href="/hsapi/_internal/{{ cm.short_id }}/delete-resource/">Delete</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+        {% endblock %}
+        <!-- Modal -->
+{#        <div class="modal fade" id="add-dcterm-dialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">#}
+{#          <div class="modal-dialog">#}
+{#            <div class="modal-content">#}
+{#            <form action="/hsapi/_internal/{{ cm.short_id }}/add-metadata/">#}
+{#    #}
+{#              <div class="modal-header">#}
+{#                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>#}
+{#                <h4 class="modal-title" id="myModalLabel">Add metadata term</h4>#}
+{#              </div>#}
+{#              <div class="modal-body">#}
+{#                        {% csrf_token %}#}
+{#    #}
+{#                        {{ dcterm_frm|crispy }}#}
+{#    #}
+{#              </div>#}
+{#              <div class="modal-footer">#}
+{#                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>#}
+{#                <button type="submit" class="btn btn-primary">Save changes</button>#}
+{#              </div>#}
+{#            </form>#}
+{#            </div>#}
+{#          </div>#}
+{#        </div>#}
+        <!-- Modal -->
+{#    <div class="modal fade" id="add-reference-dialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">#}
+{#      <div class="modal-dialog">#}
+{#        <div class="modal-content">#}
+{#          <form action="/hsapi/_internal/{{ cm.short_id }}/add-citation/">#}
+{##}
+{#          <div class="modal-header">#}
+{#            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>#}
+{#            <h4 class="modal-title" id="myModalLabel">Add reference</h4>#}
+{#          </div>#}
+{#          <div class="modal-body">#}
+{#                  {% csrf_token %}#}
+{#                  <div class="form-group">#}
+{#                      <label for="add-citation-input">Citation text:</label>#}
+{#                      <textarea class="form-control" name="content" id="add-citation-input" cols="30" rows="10"></textarea>#}
+{#                  </div>#}
+{##}
+{#          </div>#}
+{#          <div class="modal-footer">#}
+{#            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>#}
+{#            <button type="submit" class="btn btn-primary">Save changes</button>#}
+{#          </div>#}
+{#          </form>#}
+{#        </div>#}
+{#      </div>#}
+{#    </div>#}
+        {%  block modal_add_file %}
+            <div class="modal fade" id="add-file-dialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <form action="/hsapi/_internal/{{ cm.short_id }}/add-file-to-resource/" method="POST" enctype="multipart/form-data">
 
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title" id="myModalLabel">Add file to resource</h4>
+                  </div>
+                  <div class="modal-body">
+                          {% csrf_token %}
+                          <div class="form-group">
+                              <label for="add-file-input">Select files:</label>
+                              <input type="file" name="files" id="add-file-input" multiple/>
+                          </div>
+                          <div id="file-types">Any file type can be uploaded.</div>
+                          <div id="file-multiple">Multiple file upload is allowed.</div>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary">Save changes</button>
+                  </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+        {% endblock %}
+    {% endblock %}
 
 {% endwith %}
 
