changed creation workflow

--- a/ref_ts/templates/pages/create-ref-time-series.html
+++ b/ref_ts/templates/pages/create-ref-time-series.html
@@ -4,20 +4,17 @@
 
 {% block title %}
 
-    Create a Referenced HIS Time Series
+    Add HIS Reference Metadata for <i>{{ title }}</i> resource
 
 {% endblock %}
 
 {% block main %}
 
-    <h2>Create a Referenced HIS Time Series</h2>
+    <h2>Add HIS Reference Metadata for the <i>{{ title }}</i> resource</h2>
 
 <form class="form-horizontal" role="form" method="POST" enctype="multipart/form-data" action="/hsapi/_internal/create-ref-time-series/">
     {% csrf_token %}
 
-    <p>Use this form to create metadata for your Resource. Be as descriptive as you can since all of this information
-        will show up when your Resource is displayed. You can edit this information later.
-    </p>
 
     <h3>Select the type of Reference:</h3>
   <div class="form-group">
@@ -77,15 +74,15 @@
 
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-primary btn-lg btn-block">Create Resource</button>
+      <button type="submit" id="submit" class="btn btn-primary btn-lg btn-block disabled">Add HIS Time Series</button>
     </div>
   </div>
 
-  <div class="form-group" id="short-id">
-    <div class="col-sm-offset-2 col-sm-10">
-      <input type="text" class="btn btn-primary btn-lg btn-block" name='short_id' value='{{ resource.short_id }}'>
-    </div>
-  </div>
+{#  <div class="form-group" id="short-id">#}
+{#    <div class="col-sm-offset-2 col-sm-10">#}
+{#      <input type="text" class="btn btn-primary btn-lg btn-block" name='short_id' value='{{ resource.short_id }}'>#}
+{#    </div>#}
+{#  </div>#}
 
 
 
@@ -103,6 +100,9 @@
 
         $( "#reference_type" )
             .change(function () {
+                var b = $('#submit');
+                b.addClass('disabled');
+
                 if ($("[name='reference_type'] option:selected").text() == "CUAHSI HIS SOAP Service") {
                     $('.cuahsi-his-1').show();
                     $('#preview-div').html( '<div class="col-sm-offset-2" id="preview"></div>');
@@ -167,12 +167,15 @@
                     var vis_file_name = data['vis_file_name'];
                     $('#preview-div').html('<img src="{{ STATIC_URL }}img/'+vis_file_name+'" id="preview-graph" class="col-sm-offset-2"/>');
                     $('#preview-div').show();
+                    var b = $('#submit');
+                    b.removeClass('disabled');
                 },
                 error: function(data, stuff){
                     $('#fail-notice').show();
                     console.log(data);
                     console.log(stuff);
                     $('#preview-div').hide();
+
                 }
             })
         }
@@ -276,6 +279,9 @@
             b.removeClass('btn-success');
             $('#preview-div').hide();
             $('#fail-notice').hide();
+            $('#preview-div').hide();
+            var b = $('#submit');
+            b.addClass('disabled');
         });
 
         $('#wsdl_url').on('input', function(){
@@ -288,15 +294,24 @@
             $("#search-sites-button").removeClass('btn-danger');
             $('.cuahsi-his-2').hide();
             $('.cuahsi-his-3').hide();
+            var b = $('#submit');
+            b.addClass('disabled');
+
         });
 
         $('#variable').change(function(){
             $('#fail-notice').hide();
             getVals('soap');
+            var b = $('#submit');
+            b.addClass('disabled');
+
         });
 
         $('#site').change(function(){
             $('#fail-notice').hide();
+            var b = $('#submit');
+            b.addClass('disabled');
+
         });
 
         $('#preview-button-soap').click(function(){
