--- a/hs_app_netCDF/templates/pages/netcdfresource.html
+++ b/hs_app_netCDF/templates/pages/netcdfresource.html
@@ -8,72 +8,8 @@
         <div class="row">
             <div class="col-md-12">
                 <h2>Extended Metadata</h2>
-            {# Add the view mode html code below #}
 
-                {# Add Original Coverage info #}
-                <div>
-                    {% if original_coverage %}
-                            <h4><strong>Original Spatial Coverage:</strong></h4>
-                            <hr style="margin-top: 0px;margin-bottom: 2px">
-                            {% if original_coverage.name %}
-                                <div class="row">
-                                    <div class="col-sm-4"><strong>Place/Area Name:</strong></div>
-                                    <div class="col-sm-8">{{ original_coverage.name}}</div>
-                                </div>
-                            {% endif %}
-                            {% if original_coverage.projection %}
-                                <div class="row">
-                                    <div class="col-sm-4"><strong>Coordinate System:</strong></div>
-                                    <div class="col-sm-8">{{ original_coverage.projection}}</div>
-                                </div>
-                            {% endif %}
-                            {% if original_coverage.northlimit %}
-                                <div class="row">
-                                    <div class="col-sm-4"><strong>North Latitude:</strong></div>
-                                    <div class="col-sm-8">{{ original_coverage.northlimit }}</div>
-                                </div>
-                            {% endif %}
-                            {% if original_coverage.eastlimit %}
-                                <div class="row">
-                                    <div class="col-sm-4"><strong>East Longitude:</strong></div>
-                                    <div class="col-sm-8">{{ original_coverage.eastlimit }}</div>
-                                </div>
-                            {% endif %}
-                            {% if original_coverage.southlimit %}
-                                <div class="row">
-                                    <div class="col-sm-4"><strong>South Latitude:</strong></div>
-                                    <div class="col-sm-8">{{ original_coverage.southlimit }}</div>
-                                </div>
-                            {% endif %}
-                            {% if original_coverage.westlimit %}
-                                <div class="row">
-                                    <div class="col-sm-4"><strong>West Longitude:</strong></div>
-                                    <div class="col-sm-8">{{ original_coverage.westlimit}}</div>
-                                </div>
-                            {% endif %}
-                            {% if original_coverage.units %}
-                                <div class="row">
-                                    <div class="col-sm-4"><strong>Coordinate Units:</strong></div>
-                                    <div class="col-sm-8">{{ original_coverage.units}}</div>
-                                </div>
-                            {%  endif %}
-                            {% if original_coverage.projection_string_type %}
-                                <div class="row">
-                                    <div class="col-sm-4"><strong>Projection String Type:</strong></div>
-                                    <div class="col-sm-8">{{ original_coverage.projection_string_type}}</div>
-                                </div>
-                            {%  endif %}
-                            {% if original_coverage.projection_string_text %}
-                                <div class="row">
-                                    <div class="col-sm-4"><strong>Projection String Text:</strong></div>
-                                    <div class="col-sm-8">{{ original_coverage.projection_string_text}}</div>
-                                </div>
-                            {%  endif %}
-                        <hr>
-                        {% endif %}
-                </div>
-
-                {# Add Variable info #}
+                {# Add the view mode html code below #}
                 <div>
                     {% if variables %}
                         {% for variable in variables %}
@@ -120,29 +56,28 @@
                         {% endfor %}
                     <hr>
                     {% endif %}
-                <div>
 
                 {# Add ncdump info #}
-                <div>
-                    {% for f in cm.files.all %}
-                        {% if f.resource_file.name|slice:"-3:" == 'txt'%}
-                            <h2>netCDF Header Information</h2>
-                            <p>{{ f.resource_file.name|slice:"33:" }}</p>
-                            {% if f.resource_file.size <= 5000000 %}
-                                <textarea readonly rows="20" cols="100">{{ f.resource_file.read}}</textarea>
-                            {% else %}
-                                <textarea readonly rows="2" cols="100">The size of the netCDF header information text file is too large for loading on the page.</textarea>
-                            {% endif %}
+                {% for f in cm.files.all %}
+                    {% if f.resource_file.name|slice:"-3:" == 'txt'%}
+                        <div>
+                        <h4>NetCDF Data Header Information</h4>
+                        <p>{{ f.resource_file.name|slice:"33:" }}</p>
+                        {% if f.resource_file.size <= 5000000 %}
+                            <textarea readonly rows="20" cols="100">{{ f.resource_file.read}}</textarea>
+                        {% else %}
+                            <textarea readonly rows="2" cols="100">The size of the netCDF header information text file is too large for loading on the page.</textarea>
                         {% endif %}
-                    {% endfor %}
-                </div>
-
-
-            {# Add the view mode html code above #}
-
+                        </div>
+                    {% endif %}
+                {% endfor %}
 
                 </div>
+                {# Add the view mode html code above #}
+
+
             </div>
+        </div>
     {%  endif %}
 {%  endblock %}
 
@@ -153,3 +88,5 @@
     {# resource specific js can go here #}
 
 {%  endblock %}
+
+
