fixed formatting (closed div tags)

--- a/ref_ts/templates/pages/reftimeseries.html
+++ b/ref_ts/templates/pages/reftimeseries.html
@@ -59,6 +59,8 @@
                         {% endif %}
                     {% endif %}
                 </div>
+            </div>
+        </div>
     {%  endif %}
 {%  endblock %}
 
